--- a/templates/db.ini.j2
+++ b/templates/db.ini.j2
@@ -1,7 +1,7 @@
 [database]
 host     = "localhost"
-username = "omeka"
-password = "omeka"
+username = "{{db_username}}"
+password = "{{db_password}}"
 dbname   = "omeka"
 prefix   = "omeka"
 charset  = "utf8"
